--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
               >
             </li>
           </ul>
+          <span class="navbar-text">
+            <a data-toggle="modal" data-target="#loginModal">
+              <span class="fa fa-sign-in"></span> Login</a
+            >
+          </span>
         </div>
       </div>
       <button
@@ -79,6 +84,166 @@
         <span class="navbar-toggler-icon"></span>
       </button>
     </nav>
+    <div id="loginModal" class="modal fade" role="dialog">
+      <div class="modal-dialog modal-lg" role="content">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Login</h4>
+            <button type="button" class="close" data-dismiss="modal">
+              &times;
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-row">
+                <div class="form-group col-sm-4">
+                  <label class="sr-only" for="exampleInputEmail3"
+                    >Email address</label
+                  >
+                  <input
+                    type="email"
+                    class="form-control form-control-sm mr-1"
+                    id="exampleInputEmail3"
+                    placeholder="Enter email"
+                  />
+                </div>
+                <div class="form-group col-sm-4">
+                  <label class="sr-only" for="exampleInputPassword3"
+                    >Password</label
+                  >
+                  <input
+                    type="password"
+                    class="form-control form-control-sm mr-1"
+                    id="exampleInputPassword3"
+                    placeholder="Password"
+                  />
+                </div>
+                <div class="col-sm-auto">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" />
+                    <label class="form-check-label"> Remember me </label>
+                  </div>
+                </div>
+              </div>
+              <div class="form-row">
+                <button
+                  type="button"
+                  class="btn btn-secondary btn-sm ml-auto"
+                  data-dismiss="modal"
+                >
+                  Cancel
+                </button>
+                <button type="submit" class="btn btn-primary btn-sm ml-1">
+                  Sign in
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="formModal" class="modal fade" role="dialog">
+      <div class="modal-dialog modal-lg" role="content">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Reserve a Table</h4>
+            <button type="button" class="close" data-dismiss="modal">
+              &times;
+            </button>
+          </div>
+          <div class="modal-body">
+            <form id="reserveform">
+              <div class="form-group row">
+                <label for="guests" class="col-md-2 col-form-label"
+                  >Number of Guests</label
+                >
+                <div class="col-md-10">
+                  <div>
+                    <input type="radio" name="guests" id="guests1" />
+                    <label class="ml-1" for="guests">1</label>
+                    <input type="radio" name="guests" id="guests1" />
+                    <label class="ml-1" for="guests">2</label>
+                    <input type="radio" name="guests" id="guests1" />
+                    <label class="ml-1" for="guests">3</label>
+                    <input type="radio" name="guests" id="guests1" />
+                    <label class="ml-1" for="guests">4</label>
+                    <input type="radio" name="guests" id="guests1" />
+                    <label class="ml-1" for="guests">5</label>
+                    <input type="radio" name="guests" id="guests1" />
+                    <label class="ml-1" for="guests">6</label>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="section" class="col-12 col-md-2 col-form-label"
+                  >Section</label
+                >
+                <div class="col-md-10">
+                  <div class="btn-group" role="group">
+                    <!-- <input
+                      type="radio"
+                      class="btn-check d-none"
+                      name="btnradio"
+                      id="btnradio1"
+                      checked
+                    /> -->
+                    <label class="btn btn-success btn-sm" for="btnradio1"
+                      >Non-Smoking</label
+                    >
+                    <!-- 
+                    <input
+                      type="radio"
+                      class="btn-check"
+                      name="btnradio"
+                      id="btnradio2"
+                    /> -->
+                    <label class="btn btn-danger btn-sm" for="btnradio2"
+                      >Smoking</label
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="datetime" class="col-12 col-md-2 col-form-label"
+                  >Date and Time</label
+                >
+                <div class="col-12 col-md-4">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="date"
+                    name="date"
+                    placeholder="Date"
+                  />
+                </div>
+                <div class="col-12 col-md-4">
+                  <input
+                    class="form-control"
+                    id="time"
+                    name="time"
+                    placeholder="Time"
+                  />
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="offset-md-2 col-md-10">
+                  <button
+                    type="button"
+                    class="btn btn-secondary ml-auto"
+                    data-dismiss="modal"
+                  >
+                    Cancel
+                  </button>
+                  <button type="submit" class="btn btn-primary">Reserve</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     <header class="jumbotron">
       <div class="container">
         <div class="row row-header">
@@ -95,19 +260,68 @@
           </div>
           <div class="col-12 col-sm-3 align-self-center">
             <a
-              href="#reserve"
-              type="submit"
-              class="btn btn-sm btn-warning btn-block"
               role="button"
+              class="btn btn-block nav-link btn-warning"
+              data-toggle="modal"
+              data-target="#formModal"
+              >Reserve Table</a
             >
-              Reserve Table
-            </a>
           </div>
         </div>
       </div>
     </header>
 
     <div class="container">
+      <div class="row row-content">
+        <div class="col">
+          <div id="mycarousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+              <div class="carousel-item active">
+                <img
+                  class="d-block img-fluid"
+                  src="img/uthappizza.png"
+                  alt="Uthappizza"
+                />
+                <div class="carousel-caption d-none d-md-block">
+                  <h2>
+                    Uthappizza <span class="badge badge-danger">HOT</span>
+                    <span class="badge badge-pill badge-default">$4.99</span>
+                  </h2>
+                  . . .
+                </div>
+              </div>
+              <div class="carousel-item">. . .</div>
+              <div class="carousel-item">. . .</div>
+              <ol class="carousel-indicators">
+                <li
+                  data-target="#mycarousel"
+                  data-slide-to="0"
+                  class="active"
+                ></li>
+                <li data-target="#mycarousel" data-slide-to="1"></li>
+                <li data-target="#mycarousel" data-slide-to="2"></li>
+              </ol>
+            </div>
+          </div>
+          <a
+            class="carousel-control-prev"
+            href="#mycarousel"
+            role="button"
+            data-slide="prev"
+          >
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+          <a
+            class="carousel-control-next"
+            href="#mycarousel"
+            role="button"
+            data-slide="next"
+          >
+            <span class="carousel-control-next-icon"></span>
+          </a>
+        </div>
+      </div>
+
       <div class="row row-content align-items-center">
         <div class="col-12 col-sm-4 order-sm-last col-md-3">
           <h3>Our Lipsmacking Culinary Creations</h3>
@@ -186,67 +400,6 @@
           </div>
         </div>
       </div>
-      <div class="row row-content align-items-center justify-content-center">
-        <div class="col-sm-8 col-12">
-          <div class="card">
-            <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-            <div class="card-body">
-              <form id="reserve">
-                <div class="form-group row">
-                  <label for="guests" class="col-md-2 col-form-label"
-                    >Number of Guests</label
-                  >
-                  <div class="col-md-10">
-                    <div>
-                      <input type="radio" name="guests" id="guests1" />
-                      <label class="ml-1" for="guests">1</label>
-                      <input type="radio" name="guests" id="guests1" />
-                      <label class="ml-1" for="guests">2</label>
-                      <input type="radio" name="guests" id="guests1" />
-                      <label class="ml-1" for="guests">3</label>
-                      <input type="radio" name="guests" id="guests1" />
-                      <label class="ml-1" for="guests">4</label>
-                      <input type="radio" name="guests" id="guests1" />
-                      <label class="ml-1" for="guests">5</label>
-                      <input type="radio" name="guests" id="guests1" />
-                      <label class="ml-1" for="guests">6</label>
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label for="datetime" class="col-12 col-md-2 col-form-label"
-                    >Date and Time</label
-                  >
-                  <div class="col-12 col-md-4">
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="date"
-                      name="date"
-                      placeholder="Date"
-                    />
-                  </div>
-                  <div class="col-12 col-md-4">
-                    <input
-                      class="form-control"
-                      id="time"
-                      name="time"
-                      placeholder="Time"
-                    />
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <div class="offset-md-2 col-md-10">
-                    <button type="submit" class="btn btn-primary">
-                      Reserve
-                    </button>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
     <footer class="footer">
       <div class="container">
@@ -318,3 +471,4 @@
 <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script></script>
