--- a/index.html
+++ b/index.html
@@ -302,6 +302,9 @@
                 <li data-target="#mycarousel" data-slide-to="2"></li>
               </ol>
             </div>
+            <button class="btn btn-danger btn-sm" id="carouselButton">
+              <span id="carousel-button-icon" class="fa fa-pause"></span>
+            </button>
           </div>
           <a
             class="carousel-control-prev"
@@ -471,4 +474,18 @@
 <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script></script>
+<script>
+  $(document).ready(function () {
+    $("#carouselButton").click(function () {
+      if ($("#carouselButton").children("span").hasClass("fa-pause")) {
+        $("#mycarousel").carousel("pause");
+        $("#carouselButton").children("span").removeClass("fa-pause");
+        $("#carouselButton").children("span").addClass("fa-play");
+      } else if ($("#carouselButton").children("span").hasClass("fa-play")) {
+        $("#mycarousel").carousel("cycle");
+        $("#carouselButton").children("span").removeClass("fa-play");
+        $("#carouselButton").children("span").addClass("fa-pause");
+      }
+    });
+  });
+</script>
